# varint-benchmarking

./: BENCHMARKS.md  Cargo.toml  README.md  decoding.md  encoding.md  table  table.ipynb
benches/: bench.rs
src/: decoding.rs  encoding.rs  main.rs
