[package]
name = "varint-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leb128 = "0.2.5"
prefix_uvarint = "0.2.0"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
