[package]
name = "varint-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leb128 = "0.2.5"
prefix_uvarint = { path = "../prefix_varint" }
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
# strip = "symbols"
# debug = true

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "decoding"
path = "src/decoding.rs"

[[bin]]
name = "encoding"
path = "src/encoding.rs"

[[bin]]
name = "asm"
path = "src/asm.rs"
